# MinaTranchCalendar

./: CMakeLists.txt  README.md  Time.h
src/: ActivityList.cpp  ActivityList.h  ActivityListController.cpp  ActivityListController.h  ActivityListWidget.cpp  ActivityListWidget.h  BorderLayout.cpp  Commitment.cpp  Commitment.h  CommitmentDialog.cpp  CommitmentDialog.h  Date.cpp  Date.h  MainWindow.cpp  MainWindow.h  Observer.h  README.txt  Subject.h  Time.cpp  Time.h  User.cpp  User.h  UserController.cpp  UserController.h  main.cpp  programmingRules.md
test/: ActivityListFixture.cpp  ActivityListTest.cpp  CMakeLists.txt  DateTest.cpp  DateTimeTests  GameCharacterFixture.cpp  Makefile  Test_error.cpp  TimeTest.cpp  cmake_install.cmake  runAllTests.cpp
test/Nuova cartella/: CMakeCache.txt  Makefile  cmake_install.cmake
test/Nuova cartella/lib/googletest/: Makefile
test/lib/googletest/: Makefile  cmake_install.cmake
